assets/css/style.pcss
@font-face {
  font-family: Raleway;
  font-weight: normal;
  src: url('~assets/fonts/Raleway-Regular.ttf');
}

@font-face {
  font-family: Raleway;
  font-weight: bold;
  src: url('~assets/fonts/Raleway-Bold.ttf');
}

html {
  font-family: Raleway, 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI',
    Roboto, 'Helvetica Neue', Arial, sans-serif;
  font-size: 16px;
  font-feature-settings: "palt" 1;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  box-sizing: border-box;
}

body {
  @apply bg-gray-2;
}

*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
  @apply text-gray-8;
}

.default-container {
  @apply p-6;
}

.wrapper {
  @apply mx-auto max-w-2xl p-6 bg-white;

  & main {
    @apply flex items-center flex-col;
  }
}

a {
  @apply underline text-blue-5;

  &:hover {
    @apply text-blue-7;
  }
}

p {
  @apply w-full my-2;
}

